--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,24 @@
-version: '3.1'
+version: '3.8'
 services:
-  stats-server:
+  stat-server:
+    container_name: stat_server
+    depends_on:
+      - db
     ports:
       - "9090:9090"
 
   stats-db:
     image: postgres:14-alpine
+    container_name: stat
+    ports:
+      - "6541:5432"
+    volumes:
+      - ./stat-server/src/main/resources/shema.sql
+      - ./pgdata:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=stat
 
   ewm-service:
     ports:
@@ -13,3 +26,4 @@ services:
 
   ewm-db:
     image: postgres:14-alpine
+
