--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
 version: '3.8'
 services:
   stat-server:
-    container_name: stat_server
+    build: stat\stat-server
+    container_name: stat-server
     depends_on:
-      - db
+      - stats-db
     ports:
       - "9090:9090"
 
@@ -13,17 +14,21 @@ services:
     ports:
       - "6541:5432"
     volumes:
-      - ./stat-server/src/main/resources/shema.sql
       - ./pgdata:/var/lib/postgresql/data
     environment:
       - POSTGRES_PASSWORD=password
       - POSTGRES_USER=postgres
       - POSTGRES_DB=stat
 
-  ewm-service:
+  main-service:
+    build: main-service
+    container_name: main-server
+    depends_on:
+      - main-db
     ports:
       - "8080:8080"
 
-  ewm-db:
+  main-db:
     image: postgres:14-alpine
+    container_name: main-db
 
