--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.8'
 services:
-  stat-server:
+  stats-server:
     build: stat/stat-server
-    container_name: stat-server
+    container_name: stats-server
     depends_on:
       - stats-db
     ports:
@@ -10,7 +10,7 @@ services:
 
   stats-db:
     image: postgres:14-alpine
-    container_name: stat
+    container_name: stats-db
     ports:
       - "6541:5432"
     volumes:
@@ -20,15 +20,15 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_DB=stat
 
-  main-service:
+  ewm-service:
     build: main-service
-    container_name: main-server
+    container_name:  ewm-service
     depends_on:
-      - main-db
+      - ewm-db
     ports:
       - "8080:8080"
 
-  main-db:
+  ewm-db:
     image: postgres:14-alpine
-    container_name: main-db
+    container_name: ewm-db
 
