--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,12 +23,10 @@ services:
   ewm-service:
     build: main-service
     container_name:  ewm-service
-    depends_on:
-      - ewm-db
     ports:
       - "8080:8080"
 
-  ewm-db:
-    image: postgres:14-alpine
-    container_name: ewm-db
+#  ewm-db:
+#    image: postgres:14-alpine
+#    container_name: ewm-db
 
