--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.8'
 services:
-  stats-server:
+  stat-server:
     build: stat/stat-server
-    container_name: stats-server
+    container_name: stat-server
     depends_on:
       - stats-db
     ports:
