--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.8'
 services:
-  stat-server:
+  stats-server:
     build: stat/stat-server
     container_name: stat-server
     depends_on:
