--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
   stats-server:
     build: stat/stat-server
-    container_name: stat-server
+    container_name: stats-server
     depends_on:
       - stats-db
     ports:
