--- a/stat/stat-server/src/main/resources/application.properties
+++ b/stat/stat-server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#server.port=9090
+server.port=9090
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
@@ -7,7 +7,7 @@ spring.sql.init.mode=always
 
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/stat
+spring.datasource.url=jdbc:postgresql://localhost:6541/stat
 spring.datasource.username=postgres
 spring.datasource.password=password
 #---
