--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,13 @@ services:
     depends_on:
       - stats-db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/stat
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stat:5432/stat
       - SPRING_DATASOURCE_USER=postgres
       - SPRING_DATASOURCE_PASSWORD=password
 
   stats-db:
     image: postgres:14-alpine
-    container_name: stats-db
+    container_name: stat
     ports:
       - "6541:5432"
     volumes:
