#feat Дипломная работа №1

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,18 +38,23 @@ services:
       - POSTGRES_PASSWORD=password
       - POSTGRES_USER=postgres
       - POSTGRES_DB=ewm
+
   ewm-db:
    image: postgres:14-alpine
    container_name: ewm
    ports:
-     - "6643:5432"
+     - "6543:5432"
    volumes:
-     - ./main-service/src/main/resources/shema.sql:/docker-entrypoint-initdb.d/init.sql
-     - ./pgdata:/var/lib/postgresql/data
+    - ./main-service/src/main/resources/shema.sql:/docker-entrypoint-initdb.d/init.sql
    environment:
-     - POSTGRES_PASSWORD=password
-     - POSTGRES_USER=postgres
-     - POSTGRES_DB=ewm
+     POSTGRES_DB: ewm
+     POSTGRES_USER: postgres
+     POSTGRES_PASSWORD: password
+
+
+
+
+
 
 
 
