--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -5,11 +5,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialec
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 client.url=http://localhost:9090
-app.name = "ewm-main-service"
+app.name = ewm-main-service
 
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:6643/ewm
+spring.datasource.url=jdbc:postgresql://localhost:6543/ewm
 spring.datasource.username=postgres
 spring.datasource.password=password
 #---
